--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
       //---------------------------------
       var configOptions = {
         // Enter an application ID created through the Cascade builder
-        appid: "",
+        appid: "9f3dd2715b4c4ae8a0c2722a043f77df",
         // Optionally, to secure Cascade's access, if the story item is private or to use the builder
         //    configure an ArcGIS OAuth application ID (example: 6gyOg377fLUhUk6f)
         // When specified, sign-in is mandatory even if your story is public
